Docker update, notebook mod

--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -83,22 +83,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preflight  - initializing cloud credentials"
+    "# Preflight  - Initializing cloud credentials"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we start this tutorial, please run `skyplane init` to set-up the AWS credentials. Then press return to read the credentials that we would already have set-up on your machine.\n",
+    "Before we start this tutorial, it is important to configure skyplane with your AWS credentials. For this tutorial, have already preloaded your VMs with a default credential. \n",
     "\n",
-    "> **💡 Hint** - If you run into any issues, please contact one of the Skyplane team members immediately. This is required for everything that follows."
+    "> **💡 Hint** - If you run into any issues, please contact one of the Skyplane team members immediately. This step is critical to follow through the tutorial."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "💻 Configure Skyplane with AWS credentials. Run the below command in your terminal and choose `Y` only for AWS, and `n` for GCP and Azure.\n",
+    "\n",
+    "`$skyplane init`\n",
+    "\n",
+    "```\n",
+    " _____ _   ____   _______ _       ___   _   _  _____ \n",
+    "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
+    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__  \n",
+    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __| \n",
+    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___ \n",
+    "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
+    "\n",
+    "03:37:54 [DEBUG] Found existing configuration file at /root/.skyplane/config, \n",
+    "loading\n",
+    "\n",
+    "(1) Configuring AWS:\n",
+    "    Do you want to configure AWS support in Skyplane? [Y/n]:\n",
+    "    Loaded AWS credentials from the AWS CLI [IAM access key ID: ...ZEXYJW]\n",
+    "    AWS region config file saved to /root/.skyplane/aws_config\n",
+    "\n",
+    "(2) Configuring Azure:\n",
+    "    Do you want to configure Azure support in Skyplane? [Y/n]: n\n",
+    "    Disabling Azure support\n",
+    "\n",
+    "(3) Configuring GCP:\n",
+    "    Do you want to configure GCP support in Skyplane? [Y/n]: n\n",
+    "    Disabling Google Cloud support\n",
+    "\n",
+    "Config file saved to /root/.skyplane/config\n",
+    "To disable performance logging info: \n",
+    "https://skyplane.org/en/latest/performance_stats_collection.html\n",
+    "```\n",
+    "\n",
     "\n"
    ]
   },
