adding cli tutorial

--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -139,37 +139,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercise: Transferring Data with Skyplane\n",
+    "\n",
+    "The core of Skyplane is based around the `cp` command. Suppose you are working with the Stable Diffusion neural network. You’ve just gotten a fresh batch of data, but it is in us-east-1, while your network is in eu-west-1. Skyplane can help you efficiently transfer this data over to wherever your neural network may be so that you can train your model. Let’s prepare for a transfer by first initializing buckets in a few different cloud regions in AWS."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Creating Buckets"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## 💻 Launch your Sky Task!"
+    "### Setting up AWS in the Source region\n",
+    "\n",
+    "First, let’s create a bucket in your source AWS region to store the data for the neural network.\n",
+    "\n",
+    "`aws s3 mb s3://skycamp-[name]-diffusion-data --region eu-west-1`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```This is the example output```"
+    "### Setting up AWS S3 in the destination region\n",
+    "\n",
+    "Let’s also create the bucket in your destination AWS region to store a partial subset of the data. \n",
+    "\n",
+    "`aws s3 mb s3://skycamp-[name]-diffusion-backup-data --region eu-west-1`\n",
+    "\n",
+    "Now, run this command to copy over the starter data for this bucket. \n",
+    "\n",
+    "`aws s3 cp --recursive s3://stable-diffusion-partial-data-eu-west-1 s3://skycamp-[name]-diffusion-backup-data`\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trying out AWS S3 cp"
+    "# Copying data between AWS regions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trying out Skyplane"
+    "## Transferring data between AWS regions with aws s3 cp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each cloud provider has dedicated tools to move data between cloud regions. Let’s try transferring over the data using AWS’s built in cp command:\n",
+    "\n",
+    "`aws s3 cp –recursive s3://stable-diffusion-data s3://skycamp-[name]-diffusion-data`\n",
+    "\n",
+    "This will take a long time to complete. Feel free to interrupt the command. Notice that it copies data at under 25 MiB/s.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transferring data between AWS regions with skyplane cp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s delete the data in the bucket:\n",
+    "\n",
+    "`aws s3 rm --recursive s3://skycamp-[name]-diffusion-data`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now redo this transfer, but this time by using Skyplane. Compare the time that it takes!\n",
+    "\n",
+    "`skyplane cp -n 4 -r s3://stable-diffusion-data s3://skycamp-[name]-diffusion-data`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Syncing data between AWS regions\n",
+    "Now, let’s suppose that you have a bucket storing a backup of your dataset, and it already has some of the data there.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Syncing with aws s3 sync"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s try using AWS’s built-in sync command to update the weights.\n",
+    "\n",
+    "`aws s3 sync s3://skycamp-[name]-diffusion-data s3://skycamp-[name]-diffusion-backup-data`\n",
+    "\n",
+    "\n",
+    "Make sure to record the time it took! \tAgain, feel free to interrupt it once you’ve gotten a sense of the throughput. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Syncing with Skyplane sync"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let’s reset the bucket so that we can try it out with Skyplane. \n",
+    "\n",
+    "`aws s3 rm –recursive s3://skycamp-[name]-diffusion-backup-data`\n",
+    "    \n",
+    "`aws s3 cp –recursive s3://stable-diffusion-partial-data s3://skycamp-[name]-diffusion-backup-data`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let’s use Skyplane’s sync command to update the weights, and again compare the time that it takes. \n",
+    "\n",
+    "\n",
+    "`skyplane sync s3://skycamp-[name]-diffusion-data s3://skycamp-[name]-diffusion-backup-data`\n"
    ]
   },
   {
@@ -177,6 +287,15 @@
    "metadata": {},
    "source": [
     "## 💻 Terminate your cluster!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, just to make sure that we don't have any instances running that might be burning up money, let's quickly deprovision everything.\n",
+    "\n",
+    "`skyplane deprovision`"
    ]
   },
   {
@@ -210,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
