--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -51,10 +51,10 @@
     "\n",
     "After completing this notebook, you would have:\n",
     "\n",
-    "1. An understand of unix-inspired Skyplane interface.\n",
-    "2. Transfered imagenet data from US-EAST-1 (N. Virginia) to EU-WEST-1 (Ireland).\n",
+    "1. An understand of unix-inspired Skyplane interface\n",
+    "2. Transfered data for a ML workload from AWS S3 object stores in US-EAST-1 (N. Virginia) to EU-WEST-1 (Ireland)\n",
     "3. Compare and contrast `aws s3 cp` with `skyplane cp`\n",
-    "4. Terminate the transfer and clean up state."
+    "4. Terminate the transfer and clean up state"
    ]
   },
   {
@@ -70,13 +70,20 @@
    "source": [
     "These notebooks serve as a guide to Skyplane. At any point if you happen to get stuck, feel free to ping us on `#skyplane` channel on the [Skycamp slack.](https://join.slack.com/t/skycamp2022/shared_invite/zt-1gsrgky1z-iSFVEEOMSUD7Dd7B5syCsA)\n",
     "\n",
-    "We will describe what we are doing in this notebook. The commands and the example response are included. We highly recommend you open an terminal and run commands yourself. These points will be highlighted with this **icon**:\n",
+    "We will describe what we are doing in this notebook. The commands and the example response are included. We highly recommend you open an terminal and run commands yourself. \n",
     "\n",
     "### 💻 - Run commands in an interactive terminal window\n",
     "\n",
-    "You can use this icon as a hint to know when to switch away from the current notebook and edit a file or open a terminal. We also have example outputs that you can use to ensure consistency. \n",
+    "You can use this icon as a hint to know when to switch away from the current notebook and edit a file or open a terminal. We also have example outputs that you can use to ensure consistency. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to open a Terminal\n",
     "\n",
-    "> **💡 Hint** - If you're using jupyter lab, you can create a terminal in your browser by going to `File -> New -> Terminal`"
+    "If you're using jupyter lab, you can create a terminal in your browser by going to `File -> New -> Terminal`"
    ]
   },
   {
@@ -90,18 +97,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we start this tutorial, it is important to configure skyplane with your AWS credentials. For this tutorial, have already preloaded your VMs with a default credential. \n",
+    "Before we start this tutorial, we have few pre-flight checks:\n",
     "\n",
-    "> **💡 Hint** - If you run into any issues, please contact one of the Skyplane team members immediately. This step is critical to follow through the tutorial."
+    "### Let's ensure we have the latest notebook\n",
+    "\n",
+    "💻 `$git pull`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "💻 Configure Skyplane with AWS credentials. Run the below command in your terminal and choose `Y` only for AWS, and `n` for GCP and Azure.\n",
+    "### Update to the latest  Skyplane pip package\n",
     "\n",
-    "`$skyplane init`\n",
+    "💻 `$pip install -U \"git+https://github.com/skyplane-project/skyplane.git@skycamp-tutorial#egg=skyplane[aws]\"`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configure Skyplane with AWS credentials. \n",
+    "\n",
+    "Choose `Y` only for AWS, and `n` for GCP and Azure.\n",
+    "\n",
+    "💻 `$skyplane init`\n",
     "\n",
     "```\n",
     " _____ _   ____   _______ _       ___   _   _  _____ \n",
@@ -132,7 +152,8 @@
     "https://skyplane.org/en/latest/performance_stats_collection.html\n",
     "```\n",
     "\n",
-    "\n"
+    "\n",
+    "> **💡 Hint** - If you run into any issues, please contact one of the Skyplane team members immediately. This step is critical to follow through the tutorial."
    ]
   },
   {
@@ -159,9 +180,11 @@
     "\n",
     "First, let’s create a bucket in your source AWS region to store the data for the neural network.\n",
     "\n",
-    "💻 `aws s3 mb s3://skycamp-[name]-diffusion-data --region eu-west-1`\n",
+    "> **💡 Hint** - Reminder to replace [name] with a unique string. e.g., \"edcvr\"\n",
+    "\n",
+    "💻 `$aws s3 mb s3://skycamp-diffusion-data-[name] --region eu-west-1`\n",
     "```\n",
-    "make_bucket: skycamp-[name]-diffusion-data\n",
+    "make_bucket: skycamp-diffusion-data-[name]\n",
     "```"
    ]
   },
@@ -173,15 +196,15 @@
     "\n",
     "Let’s also create the bucket in your destination AWS region to store a partial subset of the data. \n",
     "\n",
-    "💻 `aws s3 mb s3://skycamp-[name]-diffusion-backup-data --region eu-west-1`\n",
+    "💻 `$aws s3 mb s3://skycamp-diffusion-backup-data-[name] --region eu-west-1`\n",
     "\n",
     "```\n",
-    "make_bucket: skycamp-[name]-diffusion-backup-data\n",
+    "make_bucket: skycamp-diffusion-backup-data-[name]\n",
     "```\n",
     "\n",
     "Now, run this command to copy over the starter data for this bucket. \n",
     "\n",
-    "💻 `aws s3 cp --recursive s3://stable-diffusion-partial-data-eu-west-1 s3://skycamp-[name]-diffusion-backup-data`\n",
+    "💻 `$aws s3 cp --recursive s3://stable-diffusion-partial-data-eu-west-1 s3://skycamp-diffusion-backup-data-[name]`\n",
     "\n",
     "```\n",
     "copy: s3://stable-diffusion-partial-data-eu-west-1/part-00006-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet to s3://skycamp-[name]-backup-data/part-00006-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
@@ -219,7 +242,7 @@
    "source": [
     "Each cloud provider has dedicated tools to move data between cloud regions. Let’s try transferring over the data using AWS’s built in cp command:\n",
     "\n",
-    "💻 `aws s3 cp --recursive s3://stable-diffusion-data s3://skycamp-[name]-diffusion-data`\n",
+    "💻 `$aws s3 cp --recursive s3://stable-diffusion-data s3://skycamp-diffusion-data-[name]`\n",
     "\n",
     "```\n",
     "copy: s3://stable-diffusion-data/part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet to s3://skycamp-anton-diffusion-data/part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
@@ -247,7 +270,7 @@
    "source": [
     "Let’s delete the data in the bucket:\n",
     "\n",
-    "💻 `aws s3 rm --recursive s3://skycamp-[name]-diffusion-data`\n",
+    "💻 `$aws s3 rm --recursive s3://skycamp-diffusion-data-[name]`\n",
     "\n",
     "```\n",
     "delete: s3://skycamp-anton-diffusion-data/part-00002-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
@@ -292,7 +315,7 @@
    "source": [
     "We will now redo this transfer, but this time by using Skyplane. Compare the time that it takes!\n",
     "\n",
-    "💻 `skyplane cp -r s3://stable-diffusion-data-us-east-1 s3://skycamp-[name]-diffusion-data`\n",
+    "💻 `$skyplane cp --recursive s3://stable-diffusion-data-us-east-1 s3://skycamp-diffusion-data-[name]`\n",
     "\n",
     "```\n",
     " _____ _   ____   _______ _       ___   _   _  _____\n",
@@ -353,7 +376,7 @@
    "source": [
     "Let’s try using AWS’s built-in sync command to update the weights.\n",
     "\n",
-    "💻 `aws s3 sync s3://skycamp-[name]-diffusion-data s3://skycamp-[name]-diffusion-backup-data`\n",
+    "💻 `$aws s3 sync s3://skycamp-diffusion-data-[name] s3://skycamp-diffusion-backup-data-[name]`\n",
     "\n",
     "```\n",
     "copy: s3://skycamp-anton-diffusion-data/part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet to s3://skycamp-anton-diffusion-backup-data/part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
@@ -380,7 +403,7 @@
    "source": [
     "First, let’s reset the bucket so that we can try it out with Skyplane. \n",
     "\n",
-    "💻 `aws s3 rm --recursive s3://skycamp-[name]-diffusion-backup-data`\n",
+    "💻 `$aws s3 rm --recursive s3://skycamp-diffusion-backup-data-[name]`\n",
     "\n",
     "```\n",
     "delete: s3://skycamp-anton-diffusion-backup-data/part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
@@ -423,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "💻 `aws s3 cp --recursive s3://stable-diffusion-partial-data s3://skycamp-[name]-diffusion-backup-data`\n",
+    "💻 `$aws s3 cp --recursive s3://stable-diffusion-partial-data s3://skycamp-diffusion-backup-data-[name]`\n",
     "\n",
     "```\n",
     "copy: s3://stable-diffusion-partial-data-eu-west-1/part-00006-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet to s3://skycamp-[name]-backup-data/part-00006-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
@@ -448,7 +471,7 @@
     "Now, let’s use Skyplane’s sync command to update the weights, and again compare the time that it takes. \n",
     "\n",
     "\n",
-    "💻 `skyplane sync s3://skycamp-[name]-diffusion-data s3://skycamp-[name]-diffusion-backup-data`\n",
+    "💻 `$skyplane sync s3://skycamp-diffusion-data-[name] s3://skycamp-diffusion-backup-data-[name]`\n",
     "\n",
     "```\n",
     " _____ _   ____   _______ _       ___   _   _  _____\n",
@@ -502,7 +525,7 @@
    "source": [
     "Finally, just to make sure that we don't have any instances running that might be burning up money, let's quickly deprovision everything.\n",
     "\n",
-    "💻 `skyplane deprovision`\n",
+    "💻 `$skyplane deprovision`\n",
     "\n",
     "```\n",
     "No instances to deprovision\n",
@@ -542,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
