--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -99,18 +99,88 @@
    "source": [
     "Before we start this tutorial, we have few pre-flight checks:\n",
     "\n",
-    "### Let's ensure we have the latest notebook\n",
-    "\n",
-    "💻 `$git pull`"
+    "### Let's ensure we have the latest notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up to date.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Please run this cell\n",
+    "!git pull"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Update to the latest  Skyplane pip package\n",
-    "\n",
-    "💻 `$pip install -U \"git+https://github.com/skyplane-project/skyplane.git@skycamp-tutorial#egg=skyplane[aws]\"`"
+    "### Update to the latest Skyplane pip package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting skyplane[aws]\n",
+      "  Cloning https://github.com/skyplane-project/skyplane.git (to revision skycamp-tutorial) to /private/var/folders/j5/gvxdztmn30l2sdhpq3w_2gzr0000gn/T/pip-install-di4rz_d_/skyplane_e36d04c81e9445ee8262c5a0bc94359c\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/skyplane-project/skyplane.git /private/var/folders/j5/gvxdztmn30l2sdhpq3w_2gzr0000gn/T/pip-install-di4rz_d_/skyplane_e36d04c81e9445ee8262c5a0bc94359c\n",
+      "  Running command git checkout -b skycamp-tutorial --track origin/skycamp-tutorial\n",
+      "  Switched to a new branch 'skycamp-tutorial'\n",
+      "  Branch 'skycamp-tutorial' set up to track remote branch 'skycamp-tutorial' from 'origin'.\n",
+      "  Resolved https://github.com/skyplane-project/skyplane.git to commit 2b3a6a1132834a8a47101fc726056b3aad48aad4\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: cachetools>=4.1.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from skyplane[aws]) (5.2.0)\n",
+      "Requirement already satisfied: requests>=2.23.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from skyplane[aws]) (2.27.1)\n",
+      "Requirement already satisfied: pandas>=1.0.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from skyplane[aws]) (1.4.1)\n",
+      "Requirement already satisfied: rich>=9.0.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from skyplane[aws]) (12.4.1)\n",
+      "Requirement already satisfied: paramiko>=2.7.2 in /Users/shishir/.py3/lib/python3.10/site-packages (from skyplane[aws]) (2.11.0)\n",
+      "Requirement already satisfied: typer>=0.4.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from skyplane[aws]) (0.6.1)\n",
+      "Requirement already satisfied: sshtunnel>=0.3.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from skyplane[aws]) (0.4.0)\n",
+      "Requirement already satisfied: boto3>=1.16.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from skyplane[aws]) (1.24.77)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /Users/shishir/.py3/lib/python3.10/site-packages (from boto3>=1.16.0->skyplane[aws]) (1.0.1)\n",
+      "Requirement already satisfied: botocore<1.28.0,>=1.27.77 in /Users/shishir/.py3/lib/python3.10/site-packages (from boto3>=1.16.0->skyplane[aws]) (1.27.77)\n",
+      "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from boto3>=1.16.0->skyplane[aws]) (0.6.0)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from pandas>=1.0.0->skyplane[aws]) (1.22.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/shishir/.py3/lib/python3.10/site-packages (from pandas>=1.0.0->skyplane[aws]) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/shishir/.py3/lib/python3.10/site-packages (from pandas>=1.0.0->skyplane[aws]) (2.8.2)\n",
+      "Requirement already satisfied: six in /Users/shishir/.py3/lib/python3.10/site-packages (from paramiko>=2.7.2->skyplane[aws]) (1.16.0)\n",
+      "Requirement already satisfied: bcrypt>=3.1.3 in /Users/shishir/.py3/lib/python3.10/site-packages (from paramiko>=2.7.2->skyplane[aws]) (4.0.0)\n",
+      "Requirement already satisfied: pynacl>=1.0.1 in /Users/shishir/.py3/lib/python3.10/site-packages (from paramiko>=2.7.2->skyplane[aws]) (1.5.0)\n",
+      "Requirement already satisfied: cryptography>=2.5 in /Users/shishir/.py3/lib/python3.10/site-packages (from paramiko>=2.7.2->skyplane[aws]) (38.0.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/shishir/.py3/lib/python3.10/site-packages (from requests>=2.23.0->skyplane[aws]) (1.26.9)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/shishir/.py3/lib/python3.10/site-packages (from requests>=2.23.0->skyplane[aws]) (2021.10.8)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from requests>=2.23.0->skyplane[aws]) (2.0.12)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/shishir/.py3/lib/python3.10/site-packages (from requests>=2.23.0->skyplane[aws]) (3.3)\n",
+      "Requirement already satisfied: commonmark<0.10.0,>=0.9.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from rich>=9.0.0->skyplane[aws]) (0.9.1)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.6.0 in /Users/shishir/.py3/lib/python3.10/site-packages (from rich>=9.0.0->skyplane[aws]) (2.11.2)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in /Users/shishir/.py3/lib/python3.10/site-packages (from typer>=0.4.0->skyplane[aws]) (8.0.3)\n",
+      "Requirement already satisfied: cffi>=1.12 in /Users/shishir/.py3/lib/python3.10/site-packages (from cryptography>=2.5->paramiko>=2.7.2->skyplane[aws]) (1.15.0)\n",
+      "Requirement already satisfied: pycparser in /Users/shishir/.py3/lib/python3.10/site-packages (from cffi>=1.12->cryptography>=2.5->paramiko>=2.7.2->skyplane[aws]) (2.21)\n",
+      "\u001b[33mWARNING: There was an error checking the latest version of pip.\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "# Please run this cell\n",
+    "!pip install -U \"git+https://github.com/skyplane-project/skyplane.git@skycamp-tutorial#egg=skyplane[aws]\""
    ]
   },
   {
