--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -47,6 +47,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercises\n",
+    "\n",
+    "This notebook consists of 4 exercises:\n",
+    "\n",
+    "1. Exercise 1: Copying data between AWS regions\n",
+    "2. Exercise 2: Let's try the same transfer with Skyplane\n",
+    "3. Exercise 3: Let's scale up transfer bandwidth with Skyplane\n",
+    "4. Exercise 4: We will now try another Skyplane feature - syncing data between AWS regions\n",
+    "\n",
     "# Learning outcomes 🎯\n",
     "\n",
     "After completing this notebook, you would have:\n",
@@ -54,7 +63,8 @@
     "1. An understand of unix-inspired Skyplane interface\n",
     "2. Transfered data for a ML workload from AWS S3 object stores in US-EAST-1 (N. Virginia) to EU-WEST-1 (Ireland)\n",
     "3. Compare and contrast `aws s3 cp` with `skyplane cp`\n",
-    "4. Terminate the transfer and clean up state"
+    "4. Terminate the transfer and clean up state\n",
+    "\n"
    ]
   },
   {
@@ -109,7 +119,7 @@
    "outputs": [],
    "source": [
     "# Please run this cell\n",
-    "!git pull"
+    "!git pull --quiet"
    ]
   },
   {
@@ -176,10 +186,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise: Transferring Data with Skyplane\n",
+    "# Transferring Data with Skyplane\n",
     "\n",
     "<p style=\"text-align:center;\">\n",
-    "    <img src=\"https://raw.githubusercontent.com/ShishirPatil/skyplane-tutorial/assets/skycamp-art.png\" width=400>\n",
+    "    <img src=\"./assets/skycamp-art.png\" width=700>\n",
     "</p>"
    ]
   },
@@ -217,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment 1: Copying data between AWS regions"
+    "# Exercise 1: Copying data between AWS regions"
    ]
   },
   {
@@ -252,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Case 2: Let's try the same transfer with Skyplane"
+    "# Exercise 2: Let's try the same transfer with Skyplane"
    ]
   },
   {
@@ -307,14 +317,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Case 3: Let's scale up transfer bandwidth with Skyplane"
+    "# Exercise 3: Let's scale up transfer bandwidth with Skyplane"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "💻 `skyplane cp -n 4 --recursive s3://laion-400m s3://skycamp-diffusion-data-[name]`"
+    "💻 `skyplane cp -n 4 --recursive s3://laion-400m s3://skycamp-diffusion-data-[name]`\n",
+    "\n",
+    "```\n",
+    " _____ _   ____   _______ _       ___   _   _  _____ \n",
+    "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
+    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__  \n",
+    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __| \n",
+    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___ \n",
+    "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
+    "\n",
+    "\n",
+    "Will transfer 32 objects totaling 53.75GB from aws:us-east-1 to aws:eu-west-1\n",
+    "    VMs to provision: 4x aws:eu-west-1, 4x aws:us-east-1\n",
+    "    Estimated egress cost: $1.08 at $0.02/GB\n",
+    "    part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "    part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "    ...\n",
+    "    part-00031-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00031-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "Continue? [Y/n]: Y\n",
+    "Transfer starting (Tip: Enable auto-confirmation with `skyplane config set autoconfirm true`)\n",
+    "\n",
+    "Storing debug information for transfer in /tmp/skyplane/transfer_logs/20221019_020117/client.log\n",
+    "✓ Initializing cloud keys (3/3) in 3.79s\n",
+    "✓ Provisioning gateway instances (8/8) in 43.82s\n",
+    "✓ Installing gateway package (8/8) in 28.26s\n",
+    "🚀 53.75GB transfer job launched\n",
+    "  Transfer progress (completing multi-part uploads) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 53.8/53.8 GiB 2.0 GB/s 0:00:00\n",
+    "Compression saved 0.20% of egress fees\n",
+    "✓ Deprovisioning instances (8/8) in 6.62s\n",
+    "⠸ Verifying all files were copied\n",
+    "\n",
+    "✅ Transfer completed successfully\n",
+    "Transfer runtime: 33.09s, Throughput: 12.99Gbps\n",
+    "```"
    ]
   },
   {
@@ -335,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We will now try another Skyplane feature - syncing data between AWS regions\n",
+    "# Exercise 4: We will now try another Skyplane feature - syncing data between AWS regions\n",
     "Now, let’s suppose that you have a bucket storing a backup of your dataset, and it already has some of the data there.\n"
    ]
   },
@@ -395,6 +438,16 @@
    "metadata": {},
    "source": [
     "## 🎉 Congratulations! Your plane has now landed. Skyplane is an open sourced project. Feel free to use Skyplane for all your data mobility needs!\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Eager to learn more? \n",
+    "\n",
+    "#### Feel free to play-around with the [Skyplane optimizer](https://optimizer.skyplane.org/), read our NSDI 2023 [paper](https://arxiv.org/abs/2210.07259), or browse through our GitHub [repository](https://github.com/skyplane-project/skyplane)."
    ]
   },
   {
