update notebook to use API keys

--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -205,6 +205,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Authentication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AWS_ACCESS_KEY = \"\" #TODO \n",
+    "AWS_SECRET_KEY = \"\" #TODO "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skyplane \n",
+    "\n",
+    "client = skyplane.SkyplaneClient(\n",
+    "    aws_config=skyplane.AWSConfig(aws_access_key=AWS_ACCESS_KEY, aws_secret_key=AWS_SECRET_KEY)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Transferring Data with Skyplane\n",
     "\n",
     "<p style=\"text-align:center;\">\n",
@@ -259,9 +289,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import skyplane\n",
-    "client = skyplane.SkyplaneClient()\n",
-    "\n",
     "bucket_path = client.object_store().create_bucket(region=\"aws:ap-south-1\", bucket_name=bucket_name)\n",
     "bucket_path"
    ]
